@@ -1,3 +1,8 @@
+*xf86-video-fbturbo-9999 (25 May 2014)
+
+  25 May 2014; Manuel Rüger <mrueg@gentoo.org> +xf86-video-fbturbo-9999.ebuild:
+  [x11-drivers/xf86-video-turbo] Add live ebuild.
+
   25 May 2014; Manuel Rüger <mrueg@gentoo.org> xf86-video-fbturbo-0.4.0.ebuild:
   [x11-drivers/xf86-video-turbo] Drop useless amd64 keyword.
 
